added additional tools